# certify-core/src/main/java/io/mosip/certify/core/dto/VCApiIssueRequest.java
@@ -1,0 +1,29 @@
+/*
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
+package io.mosip.certify.core.dto;
+
+import io.mosip.certify.core.constants.ErrorConstants;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+import java.util.Map;
+
+@Data
+public class VCApiIssueRequest {
+
+    /**
+     * REQUIRED. Full unsigned W3C Verifiable Credential (no proof).
+     */
+    @NotNull(message = ErrorConstants.INVALID_REQUEST)
+    @NotEmpty(message = ErrorConstants.INVALID_REQUEST)
+    private Map<String, Object> credential;
+
+    /**
+     * OPTIONAL. W3C issue options (proof hints). Config id is not taken from options.
+     */
+    private VCApiIssueOptions options;
+}
